example images from https://circleci.com/gh/circleci/circleci-images/5603

--- a/elixir/Dockerfile
+++ b/elixir/Dockerfile
@@ -1,7 +1,10 @@
 ###
 ### this Dockerfile is an example representing one variant of this image; please see https://github.com/circleci-public/circleci-dockerfiles for a complete list of Dockerfiles for each tag/variant of this image
 ###
-FROM circleci/elixir:1.4.5
+#
+# this Dockerfile is an example representing one variant of this image; please see https://github.com/circleci-public/circleci-dockerfiles for a complete list of Dockerfiles for each tag/variant of this image
+#
+FROM circleci/elixir:1.3.4-node
 
 # install java 8
 #
