--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -1,6 +1,9 @@
 ###
 ### this Dockerfile is an example representing one variant of this image; please see https://github.com/circleci-public/circleci-dockerfiles for a complete list of Dockerfiles for each tag/variant of this image
 ###
-FROM circleci/postgres:9.6.8-alpine
+#
+# this Dockerfile is an example representing one variant of this image; please see https://github.com/circleci-public/circleci-dockerfiles for a complete list of Dockerfiles for each tag/variant of this image
+#
+FROM circleci/postgres:9.5.12-postgis
 
 ENV PGDATA /dev/shm/pgdata/data
