example images from https://circleci.com/gh/circleci/circleci-images/5623

--- a/mongo/Dockerfile
+++ b/mongo/Dockerfile
@@ -1,6 +1,6 @@
 ###
 ### this Dockerfile is an example representing one variant of this image; please see https://github.com/circleci-public/circleci-dockerfiles for a complete list of Dockerfiles for each tag/variant of this image
 ###
-FROM mongo:3.7.3-jessie
+FROM mongo:3.6.3
 
 CMD ["mongod", "--nojournal", "--noprealloc", "--smallfiles"]
