example images from https://circleci.com/gh/circleci/circleci-images/5745

--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,7 +1,7 @@
 ###
 ### this Dockerfile is an example representing one variant of this image; please see https://github.com/circleci-public/circleci-dockerfiles for a complete list of Dockerfiles for each tag/variant of this image
 ###
-FROM circleci/node:6.13.1-stretch
+FROM circleci/node:6.14.1
 
 # install java 8
 #
