--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,7 +1,7 @@
 ###
 ### this Dockerfile is an example representing one variant of this image; please see https://github.com/circleci-public/circleci-dockerfiles for a complete list of Dockerfiles for each tag/variant of this image
 ###
-FROM circleci/php:7.0.28-apache-jessie
+FROM circleci/php:7.0.28-zts-jessie
 
 # install java 8
 #
