--- a/golang/Dockerfile
+++ b/golang/Dockerfile
@@ -1,7 +1,7 @@
 ###
 ### this Dockerfile is an example representing one variant of this image; please see https://github.com/circleci-public/circleci-dockerfiles for a complete list of Dockerfiles for each tag/variant of this image
 ###
-FROM circleci/golang:1.10.0
+FROM circleci/golang:1.10.1-stretch
 
 # install java 8
 #
