example images from https://circleci.com/gh/circleci/circleci-images/6476

--- a/mongo/Dockerfile
+++ b/mongo/Dockerfile
@@ -1,7 +1,7 @@
 ###
 ### this Dockerfile is an example representing one variant of this image; please see https://github.com/circleci-public/circleci-dockerfiles for a complete list of Dockerfiles for each tag/variant of this image
 ###
-FROM circleci/mongo:3.6.3-jessie
+FROM circleci/mongo:3.0.15
 
 # The ENTRYPOINT for mongo is at /usr/local/bin/docker-entrypoint.sh, but pre-3.6 images also
 # include a symlink from /entrypoint.sh to that script. So, it's only necessary to update the real
