--- a/redis/Dockerfile
+++ b/redis/Dockerfile
@@ -1,6 +1,6 @@
 ###
 ### this Dockerfile is an example representing one variant of this image; please see https://github.com/circleci-public/circleci-dockerfiles for a complete list of Dockerfiles for each tag/variant of this image
 ###
-FROM redis:4.0.9-32bit
+FROM redis:3.2.11
 
 CMD ["redis-server", "--appendfsync", "no", "--save", "", "--appendonly", "no"]
