--- a/mongo/Dockerfile
+++ b/mongo/Dockerfile
@@ -1,6 +1,6 @@
 ###
 ### this Dockerfile is an example representing one variant of this image; please see https://github.com/circleci-public/circleci-dockerfiles for a complete list of Dockerfiles for each tag/variant of this image
 ###
-FROM mongo:3.4.14-jessie
+FROM mongo:3.6.5
 
 CMD ["mongod", "--nojournal", "--noprealloc", "--smallfiles"]
