--- a/mongo/Dockerfile
+++ b/mongo/Dockerfile
@@ -1,7 +1,9 @@
 ###
-### this Dockerfile is an example representing one variant of this image; please see https://github.com/circleci-public/circleci-dockerfiles for a complete list of Dockerfiles for each tag/variant of this image
+### this Dockerfile is an example representing one variant of this image;
+### please see https://github.com/circleci-public/circleci-dockerfiles
+### for a complete list of Dockerfiles for each tag/variant of this image
 ###
 
-FROM mongo:3.6.5
+FROM mongo:4.0.0
 
 CMD ["mongod", "--nojournal", "--noprealloc", "--smallfiles"]
