example images from https://circleci.com/gh/circleci/circleci-images/13099

--- a/android/Dockerfile
+++ b/android/Dockerfile
@@ -161,10 +161,7 @@ RUN yes | sdkmanager --licenses && sdkmanager --update
 RUN sdkmanager \
   "tools" \
   "platform-tools" \
-  "emulator" \
-  "extras;android;m2repository" \
-  "extras;google;m2repository" \
-  "extras;google;google_play_services"
+  "emulator"
 
 RUN sdkmanager \
   "build-tools;25.0.0" \
@@ -181,7 +178,7 @@ RUN sdkmanager \
   "build-tools;28.0.3"
 
 # API_LEVEL string gets replaced by m4
-RUN sdkmanager "platforms;android-24"
+RUN sdkmanager "platforms;android-23"
 
 ARG ndk_version=android-ndk-r17b
 ARG android_ndk_home=/opt/android/${ndk_version}
