--- a/clojure/Dockerfile
+++ b/clojure/Dockerfile
@@ -4,7 +4,7 @@
 ### for a complete list of Dockerfiles for each tag/variant of this image
 ###
 
-FROM clojure:lein-2.8.1
+FROM clojure:openjdk-8-lein
 
 # make Apt non-interactive
 RUN echo 'APT::Get::Assume-Yes "true";' > /etc/apt/apt.conf.d/90circleci \
