example images from https://circleci.com/gh/circleci/circleci-images/13718

--- a/android/Dockerfile
+++ b/android/Dockerfile
@@ -161,10 +161,7 @@ RUN yes | sdkmanager --licenses && sdkmanager --update
 RUN sdkmanager \
   "tools" \
   "platform-tools" \
-  "emulator" \
-  "extras;android;m2repository" \
-  "extras;google;m2repository" \
-  "extras;google;google_play_services"
+  "emulator"
 
 RUN sdkmanager \
   "build-tools;25.0.0" \
@@ -181,15 +178,4 @@ RUN sdkmanager \
   "build-tools;28.0.3"
 
 # API_LEVEL string gets replaced by m4
-RUN sdkmanager "platforms;android-24"
-
-ARG ndk_version=android-ndk-r17b
-ARG android_ndk_home=/opt/android/${ndk_version}
-
-# install NDK
-RUN curl --silent --show-error --location --fail --retry 3 --output /tmp/${ndk_version}.zip https://dl.google.com/android/repository/${ndk_version}-linux-x86_64.zip && \
-    sudo unzip -q /tmp/${ndk_version}.zip -d /opt/android && \
-    rm /tmp/${ndk_version}.zip && \
-    sudo chown -R circleci:circleci ${android_ndk_home}
-
-ENV ANDROID_NDK_HOME ${android_ndk_home}
+RUN sdkmanager "platforms;android-23"
