example images from https://circleci.com/gh/circleci/circleci-images/16760

--- a/dynamodb/Dockerfile
+++ b/dynamodb/Dockerfile
@@ -4,7 +4,7 @@
 ### for a complete list of Dockerfiles for each tag/variant of this image
 ###
 
-FROM openjdk:11.0.1-jdk-stretch
+FROM openjdk:11.0.1-jdk
 
 # It's DynamoDB, in Docker!
 #
