example images from https://circleci.com/gh/circleci/circleci-images/19106

--- a/android/Dockerfile
+++ b/android/Dockerfile
@@ -24,10 +24,10 @@ ENV DEBIAN_FRONTEND=noninteractive
 # Switch to the archive mirror until we can get people to
 # switch to Stretch.
 RUN if grep -q Debian /etc/os-release && grep -q jessie /etc/os-release; then \
-	sudo rm /etc/apt/sources.list \
-    && echo "deb http://archive.debian.org/debian jessie main" | sudo tee -a /etc/apt/sources.list \
-    && echo "deb http://archive.debian.org/debian jessie/updates main" | sudo tee -a /etc/apt/sources.list \
-    && echo "deb http://archive.debian.org/debian jessie-updates main" | sudo tee -a /etc/apt/sources.list \
+	rm /etc/apt/sources.list \
+    && echo "deb http://archive.debian.org/debian jessie main" >> /etc/apt/sources.list \
+    && echo "deb http://archive.debian.org/debian jessie/updates main" >> /etc/apt/sources.list \
+    && echo "deb http://archive.debian.org/debian jessie-updates main" >> /etc/apt/sources.list \
 	; fi
 
 # man directory is missing in some base images
@@ -190,4 +190,4 @@ RUN sdkmanager \
   "build-tools;28.0.3"
 
 # API_LEVEL string gets replaced by m4
-RUN sdkmanager "platforms;android-23"
+RUN sdkmanager "platforms;android-28"
