example images from https://circleci.com/gh/circleci/circleci-images/22840

--- a/openjdk/Dockerfile
+++ b/openjdk/Dockerfile
@@ -4,7 +4,12 @@
 ### for a complete list of Dockerfiles for each tag/variant of this image
 ###
 
-FROM circleci/openjdk:8u212-b04-jdk-stretch
+#
+# this Dockerfile is an example representing one variant of this image;
+### please see https://github.com/circleci-public/circleci-dockerfiles
+### for a complete list of Dockerfiles for each tag/variant of this image
+#
+FROM circleci/openjdk:11.0.3-jdk-stretch-node
 
 # install java 8
 #
