example images from https://circleci.com/gh/circleci/circleci-images/25071

--- a/android/Dockerfile
+++ b/android/Dockerfile
@@ -105,7 +105,7 @@ RUN groupadd --gid 3434 circleci \
 USER circleci
 
 # Physically create these directories so that ~/.profile will add them to PATH
-RUN mkdir -p $HOME/{,.local/}bin
+RUN mkdir -p $HOME/bin && mkdir -p $HOME/.local/bin
 
 CMD ["/bin/sh"]
 
@@ -205,4 +205,4 @@ RUN sdkmanager \
   "build-tools;29.0.1"
 
 # API_LEVEL string gets replaced by m4
-RUN sdkmanager "platforms;android-25"
+RUN sdkmanager "platforms;android-26"
