example images from https://circleci.com/gh/circleci/circleci-images/25138

--- a/clojure/Dockerfile
+++ b/clojure/Dockerfile
@@ -102,5 +102,6 @@ USER circleci
 
 # Physically create these directories so that ~/.profile will add them to PATH
 RUN mkdir -p $HOME/bin && mkdir -p $HOME/.local/bin
+ENV PATH ${HOME}/.local/bin:${HOME}/bin:${PATH}
 
 CMD ["/bin/sh"]
