example images from https://circleci.com/gh/circleci/circleci-images/25239

--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -4,7 +4,7 @@
 ### for a complete list of Dockerfiles for each tag/variant of this image
 ###
 
-FROM node:12.8.0-stretch
+FROM node:12.8.1-stretch
 
 # make Apt non-interactive
 RUN echo 'APT::Get::Assume-Yes "true";' > /etc/apt/apt.conf.d/90circleci \
@@ -96,10 +96,6 @@ RUN groupadd --gid 3434 circleci \
 # END IMAGE CUSTOMIZATIONS
 
 USER circleci
-
-# Switching user can confuse Docker's idea of $HOME, so we set it explicitly
-ENV HOME /home/circleci
-RUN mkdir -p $HOME/bin && mkdir -p $HOME/.local/bin
-ENV PATH ${HOME}/.local/bin:${HOME}/bin:${PATH}
+ENV PATH /home/circleci/.local/bin:/home/circleci/bin:${PATH}
 
 CMD ["/bin/sh"]
