--- a/golang/Dockerfile
+++ b/golang/Dockerfile
@@ -4,7 +4,7 @@
 ### for a complete list of Dockerfiles for each tag/variant of this image
 ###
 
-FROM golang:1.12.8
+FROM golang:1.12.9
 
 # make Apt non-interactive
 RUN echo 'APT::Get::Assume-Yes "true";' > /etc/apt/apt.conf.d/90circleci \
@@ -100,10 +100,6 @@ RUN curl -sSL https://github.com/gotestyourself/gotestsum/releases/download/v0.3
 # END IMAGE CUSTOMIZATIONS
 
 USER circleci
-
-# Switching user can confuse Docker's idea of $HOME, so we set it explicitly
-ENV HOME /home/circleci
-RUN mkdir -p $HOME/bin && mkdir -p $HOME/.local/bin
-ENV PATH ${HOME}/.local/bin:${HOME}/bin:${PATH}
+ENV PATH /home/circleci/.local/bin:/home/circleci/bin:${PATH}
 
 CMD ["/bin/sh"]
