example images from https://circleci.com/gh/circleci/circleci-images/26542

--- a/android/Dockerfile
+++ b/android/Dockerfile
@@ -200,10 +200,11 @@ RUN sdkmanager \
   "build-tools;28.0.2" \
   "build-tools;28.0.3" \
   "build-tools;29.0.0" \
-  "build-tools;29.0.1"
+  "build-tools;29.0.1" \
+  "build-tools;29.0.2"
 
 # API_LEVEL string gets replaced by m4
-RUN sdkmanager "platforms;android-26"
+RUN sdkmanager "platforms;android-23"
 
 ARG ndk_version=android-ndk-r20
 ARG android_ndk_home=/opt/android/${ndk_version}
