example images from https://circleci.com/gh/circleci/circleci-images/28470

--- a/clojure/Dockerfile
+++ b/clojure/Dockerfile
@@ -4,7 +4,7 @@
 ### for a complete list of Dockerfiles for each tag/variant of this image
 ###
 
-FROM clojure:openjdk-14-buster
+FROM clojure:openjdk-13-tools-deps-buster
 
 # make Apt non-interactive
 RUN echo 'APT::Get::Assume-Yes "true";' > /etc/apt/apt.conf.d/90circleci \
