example images from https://circleci.com/gh/circleci/circleci-images/29299

--- a/openjdk/Dockerfile
+++ b/openjdk/Dockerfile
@@ -4,12 +4,7 @@
 ### for a complete list of Dockerfiles for each tag/variant of this image
 ###
 
-#
-# this Dockerfile is an example representing one variant of this image;
-### please see https://github.com/circleci-public/circleci-dockerfiles
-### for a complete list of Dockerfiles for each tag/variant of this image
-#
-FROM circleci/openjdk:13.0.1-jdk-buster-node
+FROM circleci/openjdk:14-ea-24-jdk-buster
 
 #
 # Install Java 11 LTS / OpenJDK 11
