example images from https://circleci.com/gh/circleci/circleci-images/34263

--- a/openjdk/Dockerfile
+++ b/openjdk/Dockerfile
@@ -4,7 +4,12 @@
 ### for a complete list of Dockerfiles for each tag/variant of this image
 ###
 
-FROM circleci/openjdk:8u252-jdk-buster
+#
+# this Dockerfile is an example representing one variant of this image;
+### please see https://github.com/circleci-public/circleci-dockerfiles
+### for a complete list of Dockerfiles for each tag/variant of this image
+#
+FROM circleci/openjdk:8u252-jdk-node
 
 #
 # Install Java 11 LTS / OpenJDK 11
