--- a/clojure/Dockerfile
+++ b/clojure/Dockerfile
@@ -4,7 +4,12 @@
 ### for a complete list of Dockerfiles for each tag/variant of this image
 ###
 
-FROM circleci/clojure:openjdk-13-buster
+#
+# this Dockerfile is an example representing one variant of this image;
+### please see https://github.com/circleci-public/circleci-dockerfiles
+### for a complete list of Dockerfiles for each tag/variant of this image
+#
+FROM circleci/clojure:openjdk-14-buster-node
 
 #
 # Install Java 11 LTS / OpenJDK 11
